top left modal close button in pf

--- a/css/calendar.pirate-ship.css
+++ b/css/calendar.pirate-ship.css
@@ -223,7 +223,7 @@
 .pirate-ship .modal .close-button {
     position: absolute; /* Positioned relative to modal-content */
     top: 10px;
-    right: 10px;
+    left: 10px;
     background-color: var(--ps-primary);
     color: var(--ps-text);
     border: none;
